--- a/package.json
+++ b/package.json
@@ -26,19 +26,27 @@
     "babel-plugin-angularjs-annotate": "^0.8.2",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-preset-env": "^1.6.1",
+    "bootstrap-loader": "^2.2.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "node-sass": "^4.7.2",
+    "resolve-url-loader": "^2.2.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
     "@uirouter/angularjs": "^1.0.12",
     "angular": "^1.6.8",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "oclazyload": "^1.1.0"
   }
