--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.12",
     "angular": "^1.6.8",
+    "angular-animate": "^1.6.8",
+    "angular-ui-bootstrap": "^2.5.6",
     "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
-    "oclazyload": "^1.1.0"
+    "lodash": "^4.17.4"
   }
 }
