:shipit: :rotating_light: Changed to front end test

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "rankmi-front-end",
   "version": "1.0.0",
   "description": "Rankmi's test for candidates",
-  "main": "src/app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open"
   },
   "repository": {
@@ -21,34 +20,39 @@
   },
   "homepage": "https://github.com/jesujcastillom/RKM-Test-Base#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "@types/angular": "^1.6.45",
+    "@types/angular-ui-bootstrap": "^0.13.46",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-angularjs-annotate": "^0.8.2",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
-    "babel-preset-env": "^1.6.1",
-    "bootstrap-loader": "^2.2.0",
-    "bootstrap-sass": "^3.3.7",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "node-sass": "^4.7.2",
-    "resolve-url-loader": "^2.2.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "resolve-url-loader": "^2.3.0",
+    "style-loader": "^0.21.0",
+    "ts-loader": "^4.3.0",
+    "tslint": "^5.10.0",
+    "tslint-loader": "^3.6.0",
+    "typescript": "^2.8.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.12",
-    "angular": "^1.6.8",
-    "angular-animate": "^1.6.8",
+    "@uirouter/angularjs": "^1.0.17",
+    "angular": "^1.7.0",
+    "angular-animate": "^1.7.0",
     "angular-ui-bootstrap": "^2.5.6",
-    "jquery": "^3.2.1",
-    "lodash": "^4.17.4"
+    "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.10"
   }
 }
