--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,7 @@
 {
   "presets": [
     [
-      "env",
-      {
-        "targets": {
-          "browsers": [
-            "ie >= 9"
-          ]
-        }
-      }
+      "env"
     ]
   ],
   "plugins": [
